# comfyui-c4d-lighting

./: README.md  nodes.py  pyproject.toml  requirements.txt
c4d_plugin/: c4d_lighting_bridge.pyp
workflows/: c4d_lighting_analyze_reference_image.json  c4d_lighting_generate_from_prompt.json
